# lib/api-spec/openapi.yaml
@@ -264,6 +264,8 @@ components:
           type: string
         description:
           type: string
+        authorName:
+          type: string
         date:
           type: string
         createdAt:
@@ -281,6 +283,8 @@ components:
           type: string
           minLength: 1
         description:
+          type: string
+        authorName:
           type: string
         date:
           type: string
